[package]
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
name = "test"
version = "0.1.0"

[dependencies]
clap = "2.22.1"
env_logger = "0.4.2"
error-chain = "0.10.0"
futures = "0.1.11"
futures-cpupool = "0.1.5"
log = "0.3.7"
memchr = "1.0.1"
rdkafka = "0.8.1"
tokio-core = "0.1.6"
influxdb = {git = "https://github.com/panoptix-za/influxdb-rs.git"}
